--- a/Android/app/src/main/assets/license.html
+++ b/Android/app/src/main/assets/license.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+</head>
 <body>
 <h1>Feedbackr</h1>
 
@@ -27,36 +30,36 @@
 <h4>Firebase Services</h4>
 <p>Apache License Version 2.0</p>
 
-<pre>Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
+<p style="font-family: courier;">Licensed under the Apache License, Version 2.0 (the "License");<br />
+you may not use this file except in compliance with the License.<br />
+You may obtain a copy of the License at<br />
+<br />
+http://www.apache.org/licenses/LICENSE-2.0<br />
+    <br />
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License.</pre>
+limitations under the License.</p>
 
 <h4>Geofire-Java</h4>
 <p>The MIT License (MIT)</p>
 
-<pre>
-The MIT License (MIT)
-
-Copyright (c) 2014 Firebase
-
+<p style="font-family: courier;">
+The MIT License (MIT)<br />
+    <br />
+Copyright (c) 2014 Firebase<br />
+    <br />
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
+furnished to do so, subject to the following conditions:<br />
+    <br />
 The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
+copies or substantial portions of the Software.<br />
+    <br />
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -64,6 +67,6 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-</pre>
+</p>
 </body>
 </html>
